fixing spacing

--- a/homeStyles.css
+++ b/homeStyles.css
@@ -49,7 +49,7 @@ header {
 }
 
 .genreList {
-    padding: 23%;
+    padding: 21%;
 }
 
 .artistList:hover, .trackList:hover, .genreList:hover{
